@@ -109,23 +109,87 @@ name|int
 name|index
 parameter_list|)
 block|{
+if|if
+condition|(
+name|data
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+comment|// We support both List<Object> and Object[]
+comment|// so we have to do differently.
+name|boolean
+name|isArray
+init|=
+name|data
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|isArray
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|isArray
+condition|)
+block|{
+name|Object
+index|[]
+name|list
+init|=
+operator|(
+name|Object
+index|[]
+operator|)
+name|data
+decl_stmt|;
+if|if
+condition|(
+name|index
+operator|<
+literal|0
+operator|||
+name|index
+operator|>=
+name|list
+operator|.
+name|length
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+return|return
+name|list
+index|[
+name|index
+index|]
+return|;
+block|}
+else|else
+block|{
 name|List
 argument_list|<
 name|?
 argument_list|>
 name|list
 init|=
-name|getList
-argument_list|(
+operator|(
+name|List
+argument_list|<
+name|?
+argument_list|>
+operator|)
 name|data
-argument_list|)
 decl_stmt|;
 if|if
 condition|(
-name|list
-operator|==
-literal|null
-operator|||
 name|index
 operator|<
 literal|0
@@ -151,6 +215,7 @@ name|index
 argument_list|)
 return|;
 block|}
+block|}
 specifier|public
 name|int
 name|getListLength
@@ -159,33 +224,75 @@ name|Object
 name|data
 parameter_list|)
 block|{
+if|if
+condition|(
+name|data
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+comment|// We support both List<Object> and Object[]
+comment|// so we have to do differently.
+name|boolean
+name|isArray
+init|=
+name|data
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|isArray
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|isArray
+condition|)
+block|{
+name|Object
+index|[]
+name|list
+init|=
+operator|(
+name|Object
+index|[]
+operator|)
+name|data
+decl_stmt|;
+return|return
+name|list
+operator|.
+name|length
+return|;
+block|}
+else|else
+block|{
 name|List
 argument_list|<
 name|?
 argument_list|>
 name|list
 init|=
-name|getList
-argument_list|(
+operator|(
+name|List
+argument_list|<
+name|?
+argument_list|>
+operator|)
 name|data
-argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|list
-operator|==
-literal|null
-condition|)
-return|return
-operator|-
-literal|1
-return|;
 return|return
 name|list
 operator|.
 name|size
 argument_list|()
 return|;
+block|}
 block|}
 specifier|public
 name|List
@@ -207,6 +314,8 @@ condition|)
 return|return
 literal|null
 return|;
+comment|// We support both List<Object> and Object[]
+comment|// so we have to do differently.
 if|if
 condition|(
 name|data
