@@ -35,6 +35,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -492,20 +502,9 @@ name|StructField
 name|fieldRef
 parameter_list|)
 block|{
-name|List
-argument_list|<
-name|Object
-argument_list|>
-name|list
-init|=
-name|getStructFieldsDataAsList
-argument_list|(
-name|data
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
-name|list
+name|data
 operator|==
 literal|null
 condition|)
@@ -514,6 +513,49 @@ return|return
 literal|null
 return|;
 block|}
+comment|// We support both List<Object> and Object[]
+comment|// so we have to do differently.
+name|boolean
+name|isArray
+init|=
+name|data
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|isArray
+argument_list|()
+decl_stmt|;
+name|int
+name|listSize
+init|=
+operator|(
+name|isArray
+condition|?
+operator|(
+operator|(
+name|Object
+index|[]
+operator|)
+name|data
+operator|)
+operator|.
+name|length
+else|:
+operator|(
+operator|(
+name|List
+argument_list|<
+name|Object
+argument_list|>
+operator|)
+name|data
+operator|)
+operator|.
+name|size
+argument_list|()
+operator|)
+decl_stmt|;
 name|MyField
 name|f
 init|=
@@ -529,10 +571,7 @@ operator|.
 name|size
 argument_list|()
 operator|!=
-name|list
-operator|.
-name|size
-argument_list|()
+name|listSize
 operator|&&
 operator|!
 name|warned
@@ -556,14 +595,32 @@ argument_list|()
 operator|+
 literal|" fields inside a list of "
 operator|+
-name|list
-operator|.
-name|size
-argument_list|()
+name|listSize
 operator|+
 literal|" elements: "
 operator|+
-name|list
+operator|(
+name|isArray
+condition|?
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|(
+name|Object
+index|[]
+operator|)
+name|data
+argument_list|)
+else|:
+operator|(
+name|List
+argument_list|<
+name|Object
+argument_list|>
+operator|)
+name|data
+operator|)
 argument_list|)
 expr_stmt|;
 name|LOG
@@ -596,23 +653,55 @@ name|size
 argument_list|()
 operator|)
 assert|;
-return|return
+if|if
+condition|(
 name|fieldID
 operator|>=
-name|list
-operator|.
-name|size
-argument_list|()
-condition|?
+name|listSize
+condition|)
+block|{
+return|return
 literal|null
-else|:
-name|list
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+name|isArray
+condition|)
+block|{
+return|return
+operator|(
+operator|(
+name|Object
+index|[]
+operator|)
+name|data
+operator|)
+index|[
+name|fieldID
+index|]
+return|;
+block|}
+else|else
+block|{
+return|return
+operator|(
+operator|(
+name|List
+argument_list|<
+name|Object
+argument_list|>
+operator|)
+name|data
+operator|)
 operator|.
 name|get
 argument_list|(
 name|fieldID
 argument_list|)
 return|;
+block|}
 block|}
 annotation|@
 name|SuppressWarnings
@@ -641,6 +730,8 @@ return|return
 literal|null
 return|;
 block|}
+comment|// We support both List<Object> and Object[]
+comment|// so we have to do differently.
 if|if
 condition|(
 name|data
