@@ -349,6 +349,19 @@ return|return
 literal|null
 return|;
 block|}
+name|MyField
+name|f
+init|=
+operator|(
+name|MyField
+operator|)
+name|fieldRef
+decl_stmt|;
+name|Object
+name|fieldData
+decl_stmt|;
+comment|// We support both List<Object> and Object[]
+comment|// so we have to do differently.
 if|if
 condition|(
 name|data
@@ -360,32 +373,40 @@ name|isArray
 argument_list|()
 condition|)
 block|{
-name|data
-operator|=
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-operator|.
-name|asList
-argument_list|(
+name|Object
+index|[]
+name|list
+init|=
 operator|(
 name|Object
 index|[]
 operator|)
 name|data
-argument_list|)
+decl_stmt|;
+assert|assert
+operator|(
+name|list
+operator|.
+name|length
+operator|==
+name|unionObjectInspectors
+operator|.
+name|size
+argument_list|()
+operator|)
+assert|;
+name|fieldData
+operator|=
+name|list
+index|[
+name|f
+operator|.
+name|structID
+index|]
 expr_stmt|;
 block|}
-name|MyField
-name|f
-init|=
-operator|(
-name|MyField
-operator|)
-name|fieldRef
-decl_stmt|;
+else|else
+block|{
 name|List
 argument_list|<
 name|Object
@@ -413,6 +434,18 @@ name|size
 argument_list|()
 operator|)
 assert|;
+name|fieldData
+operator|=
+name|list
+operator|.
+name|get
+argument_list|(
+name|f
+operator|.
+name|structID
+argument_list|)
+expr_stmt|;
+block|}
 return|return
 name|unionObjectInspectors
 operator|.
@@ -425,14 +458,7 @@ argument_list|)
 operator|.
 name|getStructFieldData
 argument_list|(
-name|list
-operator|.
-name|get
-argument_list|(
-name|f
-operator|.
-name|structID
-argument_list|)
+name|fieldData
 argument_list|,
 name|f
 operator|.
@@ -467,6 +493,8 @@ return|return
 literal|null
 return|;
 block|}
+comment|// We support both List<Object> and Object[]
+comment|// so we have to do differently.
 if|if
 condition|(
 name|data
